--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Application using Webpack",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js --bail -p",
-    "dev": "webpack-dev-server --mode development --watch"
+    "build": "webpack",
+    "dev": "webpack-dev-server --mode development --watch",
+    "test": "karma start"
   },
   "keywords": [
     "angular",
@@ -26,6 +27,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@uirouter/visualizer": "^7.0.0",
+    "angular-mocks": "^1.7.9",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -38,6 +40,16 @@
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
+    "jasmine-core": "^3.5.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.0.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-teamcity-reporter": "^1.1.0",
+    "karma-webpack": "^4.0.2",
     "mini-css-extract-plugin": "^0.8.0",
     "ng-annotate-loader": "^0.6.1",
     "node-sass": "^4.12.0",
@@ -63,6 +75,7 @@
     "angular-socket-io": "^0.7.0",
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "1.0.22",
+    "angularjs-toaster": "^3.0.0",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
