--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular-socket-io": "^0.7.0",
-    "socket.io-client": "^2.3.0"
+    "angular-socket-io": "^0.7.0"
   }
 }
