--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "webpack",
     "es6",
     "babel",
-    "isparta",
-    "boilerplate",
     "eslint",
     "jasmine",
     "karma"
@@ -71,17 +69,19 @@
   "dependencies": {
     "angular": "1.7.8",
     "angular-animate": "^1.7.9",
+    "angular-messages": "^1.7.9",
     "angular-resource": "^1.7.9",
     "angular-socket-io": "^0.7.0",
     "angular-ui-bootstrap": "^2.5.6",
+    "angular-ui-notification": "^0.3.6",
     "angular-ui-router": "1.0.22",
     "angularjs-toaster": "^3.0.0",
     "bootstrap": "4.3.1",
+    "dotenv": "^8.2.0",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "ngstorage": "^0.3.11",
     "popper.js": "1.14.7",
-    "rx-angular": "^1.1.3",
-    "socket.io-client": "^2.3.0"
+    "rx-angular": "^1.1.3"
   }
 }
